# RoCoX-Codex

./: README.en-US.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts  router.ts  share.ts  tokens.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AngelPowerChart.vue  CacheDialog.vue  ChainItem.vue  DevDialog.vue  Dialog.vue  FeatureFilter.vue  ItemList.vue  SearchFilter.vue  SkillList.vue  SpiritList.vue  TopLinks.vue
src/components/native/: Dialog.vue  GoBack.vue  Menu.vue  Paganation.vue  Pagination.vue  Popover.vue  TitleBar.vue
src/composables/: useApi.ts  useDarkMode.ts  useHttp.ts  useLocal.ts  useWindow.ts
src/db/: ListPages.ts  SimpleAngel.ts  TestDB.ts  index.ts
src/views/: About.vue  Angel.vue  Help.vue  Home.vue  Skill.vue
